--- a/CrewManagement/app/src/main/res/layout/view_screen.xml
+++ b/CrewManagement/app/src/main/res/layout/view_screen.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment android:name="com.example.crewmanagement.ui.progress.ProgressFragmentFragment"
+    <fragment android:name="com.example.crewmanagement.progress_fragment"
         android:id="@+id/progressMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
 
-    <fragment android:name="com.example.crewmanagement.ui.members.MembersFragment"
+    <fragment android:name="com.example.crewmanagement.Members_Fragment"
         android:id="@+id/members"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
