--- a/CrewManagement/app/src/main/res/layout/view_screen.xml
+++ b/CrewManagement/app/src/main/res/layout/view_screen.xml
@@ -5,12 +5,12 @@
     <fragment android:name="com.example.crewmanagement.progress_fragment"
         android:id="@+id/progressMenu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"/>
 
     <fragment android:name="com.example.crewmanagement.Members_Fragment"
         android:id="@+id/members"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 </LinearLayout>
