--- a/CrewManagement/app/src/main/res/layout/activity_job_assignment.xml
+++ b/CrewManagement/app/src/main/res/layout/activity_job_assignment.xml
@@ -10,7 +10,8 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/title"
