--- a/CrewManagement/app/src/main/res/layout/activity_navigation.xml
+++ b/CrewManagement/app/src/main/res/layout/activity_navigation.xml
@@ -36,7 +36,7 @@
         android:id="@+id/but_Progress"
         android:layout_width="201dp"
         android:layout_height="141dp"
-        android:text="@string/progress"
+        android:text="@string/menuOption3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
