Pre-submission Push

--- a/CrewManagement/app/src/main/res/layout-land/fragment_create_task.xml
+++ b/CrewManagement/app/src/main/res/layout-land/fragment_create_task.xml
@@ -51,18 +51,9 @@
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/jobList_taskView"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ScrollView
-            android:id="@+id/jobList_taskView"
-            android:layout_width="333dp"
-            android:layout_height="413dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </ScrollView>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.44" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
