--- a/CrewManagement/app/src/main/res/layout-land/fragment_add_member_to_job.xml
+++ b/CrewManagement/app/src/main/res/layout-land/fragment_add_member_to_job.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/lblJobSelection2"
+            android:id="@+id/lblJobSelection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Select_Job"
@@ -19,11 +19,10 @@
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/spnr_jobChoice"
             app:layout_constraintStart_toStartOf="@+id/spnr_jobChoice"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.866" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/lblMemberSelection2"
+            android:id="@+id/lblMemberSelection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Select_Member"
@@ -31,41 +30,38 @@
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/spnr_MemberChoice"
             app:layout_constraintStart_toStartOf="@+id/spnr_MemberChoice"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.923" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
             android:id="@+id/spnr_jobChoice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_width="332dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="64dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
             android:id="@+id/spnr_MemberChoice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_width="369dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spnr_jobChoice" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnAddMemberToJob"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="248dp"
             android:text="@string/addMemberToJob"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.293"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spnr_MemberChoice" />
 
         <Button
-            android:id="@+id/btnClearMTJForm"
+            android:id="@+id/btnClearForm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
